--- a/tharam.html
+++ b/tharam.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>School Bag</h1>
-    <h2>git pll velasaiyala</h2>
+    <h2>git pll velasaiyala version 2</h2>
 </body>
 </html>
 <!-- Raj end -->
