--- a/tharam.html
+++ b/tharam.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>School Bag</h1>
-    <h2>git pll velasaiyala version 2.1</h2>
+    <h2>git pll velasaiyala version 2</h2>
+    <h3>Ithu JOhn</h3>
 </body>
 </html>
 <!-- Raj end -->
