--- a/tharam.html
+++ b/tharam.html
@@ -7,9 +7,10 @@
     <title>demo</title>
 </head>
 <body>
-    <h1>School Bag</h1>
-    <h2>git pll velasaiyala version 2</h2>
-    <h3>Ithu JOhn</h3>
+    <h1>raj</h1>
+    <h2>raj 2</h2>
+    <h3>raj 3</h3>
+
 </body>
 </html>
 <!-- Raj end -->
